// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`custom contracts html renders contract description 1`] = `
Array [
  <h2>
    Custom Contracts
</h2>,
  <p>
    To watch and interact with a contract already deployed on the blockchain, you need to know its address and the description of its interface in JSON format.
</p>,
  <div
    className="dapp-clear-fix"
/>,
]
`;

exports[`custom contracts html renders watch contract button 1`] = `
Array [
  <button
    className="wallet-box create add-contract"
    onClick={[Function]}
>
    <div
        className="account-pattern"
    >
        +
    </div>
    <h3>
        WATCH CONTRACT
    </h3>
</button>,
  <div
    className="dapp-clear-fix"
/>,
]
`;

exports[`custom contracts html renders watch contract button 2`] = `
Array [
  <button
    className="wallet-box create add-contract"
    onClick={[Function]}
>
    <div
        className="account-pattern"
    >
        +
    </div>
    <h3>
        WATCH CONTRACT
    </h3>
</button>,
  <div
    className="dapp-clear-fix"
/>,
]
`;

exports[`custome tokens html renders add token button 1`] = `
<button
  className="wallet-box create add-token"
  onClick={[Function]}
  style={
    Object {
      "float": "left",
    }
  }
>
  <div
    className="account-pattern"
  >
    +
  </div>
  <h3>
    WATCH CUSTOM TOKEN
  </h3>
</button>
`;

exports[`custome tokens html renders add token button 2`] = `
<button
  className="wallet-box create add-token"
  onClick={[Function]}
  style={
    Object {
      "float": "left",
    }
  }
>
  <div
    className="account-pattern"
  >
    +
  </div>
  <h3>
    WATCH CUSTOM TOKEN
  </h3>
</button>
`;

exports[`custome tokens html renders token description 1`] = `
Array [
  <h2>
    Custom Tokens
</h2>,
  <p>
    Tokens are currencies and other fungibles built on the Ethereum platform. In order for accounts to watch for tokens and send them, you have to add their address to this list. You can create your own token by simply modifying this example of a custom token contract or learning more about Ethereum Tokens.
</p>,
  <div
    className="dapp-clear-fix"
/>,
]
`;

exports[`title html renders title 1`] = `
<h1>
  <strong>
    Contracts
  </strong>
</h1>
`;
